--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,35 +3,39 @@ name: Python CI
 on:
   push:
     branches:
-      - main  # Cambia 'main' por la rama en la que estés trabajando
+      - main
   pull_request:
     branches:
-      - main  # Cambia 'main' por la rama en la que estés trabajando
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v2
-
+    # Paso 1: Revisar el código del repositorio
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      
+    # Paso 2: Configurar Python
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.12'  # Aquí pones la versión de Python que estás utilizando "AH MIGO"
-
+        python-version: '3.12'
+    
+    # Paso 3: Instalar dependencias (asegúrate de tener un requirements.txt con todas las dependencias necesarias)
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
-    - name: Run tests (CI specific step)
+    
+    # Paso 4: Iniciar el servidor web en segundo plano
+    - name: Start web server in background
       run: |
-        if [ "$CI" = "true" ]; then
-          echo "Estam en CI, executant els tests en GitHub Actions"
-          python -m unittest discover -s tests
-        else
-          echo "Estam en el entorn local, executant los tests localmente"
-          python -m unittest discover -s tests
-        fi
+        nohup python your_web_app.py &  # Reemplaza con el nombre de tu archivo o comando para iniciar el servidor
+        sleep 5  # Espera 5 segundos para asegurarte de que el servidor ha arrancado correctamente
+    
+    # Paso 5: Ejecutar los tests
+    - name: Run tests
+      run: |
+        python -m unittest discover -s tests  # Asegúrate de que los tests están en la carpeta 'tests' o ajusta el nombre de la carpeta
