--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,31 +11,46 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
-    # Paso 1: Revisar el código del repositorio
-    - name: Checkout repository
+    # Paso 1: Obtener el código
+    - name: Checkout code
       uses: actions/checkout@v3
-      
-    # Paso 2: Configurar Python
+
+    # Paso 2: Configurar Python 3.12
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.12'
-    
-    # Paso 3: Instalar dependencias (asegúrate de tener un requirements.txt con todas las dependencias necesarias)
+
+    # Paso 3: Instalar dependencias
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    
-    # Paso 4: Iniciar el servidor web en segundo plano
-    - name: Start web server in background
+
+    # Paso 4: Instalar Chrome y ChromeDriver
+    - name: Install Chrome and ChromeDriver
       run: |
-        nohup python your_web_app.py &  # Reemplaza con el nombre de tu archivo o comando para iniciar el servidor
-        sleep 5  # Espera 5 segundos para asegurarte de que el servidor ha arrancado correctamente
-    
-    # Paso 5: Ejecutar los tests
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
+        sudo apt-get install -y chromium-chromedriver
+        sudo ln -s /usr/lib/chromium-browser/chromedriver /usr/local/bin/chromedriver
+
+    # Paso 5: Verificar que Chrome y ChromeDriver están instalados
+    - name: Verify Chrome and ChromeDriver
+      run: |
+        google-chrome --version || (echo "Chrome no está instalado correctamente" && exit 1)
+        chromedriver --version || (echo "ChromeDriver no está instalado correctamente" && exit 1)
+
+    # Paso 6: Iniciar la aplicación Flask
+    - name: Start Flask app
+      run: |
+        nohup python app.py > flask.log 2>&1 &  # Cambia app.py por el nombre de tu aplicación
+        sleep 10  # Esperar que Flask se inicie
+        curl -f http://127.0.0.1:5000 || (echo "Flask no está en ejecución" && cat flask.log && exit 1)
+
+    # Paso 7: Ejecutar los tests
     - name: Run tests
       run: |
-        python -m unittest discover -s tests  # Asegúrate de que los tests están en la carpeta 'tests' o ajusta el nombre de la carpeta
+        python -m unittest discover -s tests  # Ajusta si la carpeta de tests no es 'tests'
